Update website UI / features

--- a/public/index.html
+++ b/public/index.html
@@ -740,6 +740,9 @@
                     <p class="announcement-text">
                         Welcome to Sorsogon Chat! Connect with strangers from your municipality or with shared interests.
                     </p>
+                    <p class="announcement">
+                        Upcoming Features: Reply Thread, Emojis, Nickname Suggestions, and more!
+                    </p>
                 </div>
             </div>
 
