--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,11 @@
             color: #EAF2FF;
         }
 
+        .username-input-group {
+            display: flex;
+            gap: 8px;
+        }
+
         .form-input, .form-select {
             width: 100%;
             padding: 12px 16px;
@@ -88,6 +93,62 @@
 
         .form-input:focus, .form-select:focus {
             border-color: #18C3E2;
+        }
+
+        .shuffle-btn {
+            padding: 12px 16px;
+            background: #10192E;
+            border: 1px solid #1E2A44;
+            border-radius: 8px;
+            color: #18C3E2;
+            cursor: pointer;
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .shuffle-btn:hover {
+            background: #18C3E2;
+            color: #050B16;
+            border-color: #18C3E2;
+        }
+
+        .gender-options {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 8px;
+        }
+
+        .gender-option {
+            padding: 12px;
+            background: #10192E;
+            border: 2px solid #1E2A44;
+            border-radius: 8px;
+            text-align: center;
+            cursor: pointer;
+            transition: all 0.2s;
+            user-select: none;
+        }
+
+        .gender-option:hover {
+            border-color: #18C3E2;
+        }
+
+        .gender-option.selected {
+            background: #18C3E2;
+            color: #050B16;
+            border-color: #18C3E2;
+            font-weight: 600;
+        }
+
+        .gender-icon {
+            font-size: 24px;
+            margin-bottom: 4px;
+        }
+
+        .gender-label {
+            font-size: 13px;
         }
 
         .interests-grid {
@@ -231,6 +292,7 @@
             align-items: center;
             justify-content: center;
             color: #18C3E2;
+            font-size: 24px;
         }
 
         .user-info {
@@ -245,6 +307,16 @@
         .user-label {
             font-size: 14px;
             color: #9FB0C8;
+        }
+
+        .user-gender {
+            display: inline-block;
+            padding: 2px 8px;
+            background: #10192E;
+            border-radius: 12px;
+            font-size: 12px;
+            color: #18C3E2;
+            margin-top: 4px;
         }
 
         .user-location {
@@ -294,6 +366,28 @@
             line-height: 1.5;
         }
 
+        .btn-back {
+            width: 100%;
+            padding: 10px;
+            background: #1E2A44;
+            color: #EAF2FF;
+            border: 1px solid #2A3A54;
+            border-radius: 8px;
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+        }
+
+        .btn-back:hover {
+            background: #2A3A54;
+            border-color: #18C3E2;
+        }
+
         /* Right Panel */
         .right-panel {
             background: #0B1220;
@@ -326,6 +420,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 20px;
         }
 
         .stranger-name {
@@ -417,6 +512,46 @@
             gap: 12px;
         }
 
+        .typing-indicator-wrapper {
+            display: flex;
+            margin-bottom: 8px;
+        }
+
+        .typing-indicator {
+            display: none;
+            align-items: center;
+            gap: 6px;
+            padding: 8px 12px;
+            background: #1F7A8C;
+            border-radius: 12px;
+            max-width: 70%;
+        }
+
+        .typing-indicator.active {
+            display: flex;
+        }
+
+        .typing-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: #EAF2FF;
+            animation: typing 1.4s infinite;
+        }
+
+        .typing-dot:nth-child(2) {
+            animation-delay: 0.2s;
+        }
+
+        .typing-dot:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+
+        @keyframes typing {
+            0%, 60%, 100% { opacity: 0.3; transform: translateY(0); }
+            30% { opacity: 1; transform: translateY(-6px); }
+        }
+
         .empty-state {
             height: 100%;
             display: flex;
@@ -461,6 +596,7 @@
         .message {
             display: flex;
             margin-bottom: 8px;
+            position: relative;
         }
 
         .message.you {
@@ -471,6 +607,13 @@
             max-width: 70%;
             padding: 12px 16px;
             border-radius: 12px;
+            position: relative;
+            cursor: pointer;
+            user-select: none;
+        }
+
+        .message-bubble:active {
+            transform: scale(0.98);
         }
 
         .message.you .message-bubble {
@@ -493,16 +636,138 @@
             word-wrap: break-word;
         }
 
+        .message-reactions {
+            display: flex;
+            gap: 4px;
+            margin-top: 6px;
+            flex-wrap: wrap;
+        }
+
+        .reaction-item {
+            display: flex;
+            align-items: center;
+            gap: 2px;
+            padding: 2px 6px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            font-size: 12px;
+        }
+
+        .reaction-emoji {
+            font-size: 14px;
+        }
+
+        .reaction-count {
+            font-size: 11px;
+        }
+
+        .reaction-picker {
+            display: none;
+            position: absolute;
+            background: #0B1220;
+            border: 1px solid #1E2A44;
+            border-radius: 24px;
+            padding: 8px 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            bottom: 100%;
+            margin-bottom: 8px;
+        }
+
+        .reaction-picker.active {
+            display: flex;
+            gap: 6px;
+        }
+
+        .reaction-emoji-btn {
+            font-size: 24px;
+            cursor: pointer;
+            padding: 6px;
+            border-radius: 50%;
+            transition: all 0.2s;
+            background: transparent;
+            border: none;
+        }
+
+        .reaction-emoji-btn:hover {
+            background: #1E2A44;
+            transform: scale(1.2);
+        }
+
+        .replying-to {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 8px 12px;
+            border-radius: 8px;
+            margin-bottom: 8px;
+            font-size: 13px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .cancel-reply {
+            cursor: pointer;
+            padding: 4px;
+            color: #FF6B00;
+        }
+
+        .emoji-picker {
+            display: none;
+            position: absolute;
+            bottom: 100%;
+            left: 0;
+            background: #0B1220;
+            border: 1px solid #1E2A44;
+            border-radius: 12px;
+            padding: 12px;
+            margin-bottom: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            max-width: 300px;
+        }
+
+        .emoji-picker.active {
+            display: block;
+        }
+
+        .emoji-grid {
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            gap: 4px;
+            max-height: 200px;
+            overflow-y: auto;
+        }
+
+        .emoji-item {
+            font-size: 24px;
+            padding: 8px;
+            cursor: pointer;
+            border-radius: 6px;
+            transition: all 0.2s;
+            text-align: center;
+        }
+
+        .emoji-item:hover {
+            background: #1E2A44;
+            transform: scale(1.2);
+        }
+
         .input-area {
             padding: 16px 20px;
             border-top: 1px solid #1E2A44;
             display: flex;
             gap: 12px;
+            position: relative;
+        }
+
+        .input-wrapper {
+            flex: 1;
+            position: relative;
         }
 
         .message-input {
-            flex: 1;
-            padding: 12px 16px;
+            width: 100%;
+            padding: 12px 50px 12px 16px;
             background: #10192E;
             border: 1px solid #1E2A44;
             border-radius: 8px;
@@ -517,6 +782,24 @@
 
         .message-input:focus {
             border-color: #18C3E2;
+        }
+
+        .emoji-trigger {
+            position: absolute;
+            right: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: none;
+            border: none;
+            font-size: 20px;
+            cursor: pointer;
+            padding: 4px 8px;
+            border-radius: 6px;
+            transition: all 0.2s;
+        }
+
+        .emoji-trigger:hover {
+            background: #1E2A44;
         }
 
         .btn-send {
@@ -580,6 +863,10 @@
             .message-bubble {
                 max-width: 85%;
             }
+
+            .emoji-grid {
+                grid-template-columns: repeat(6, 1fr);
+            }
         }
 
         /* Scrollbar */
@@ -618,7 +905,51 @@
             <form id="welcomeForm">
                 <div class="form-group">
                     <label class="form-label">Username</label>
-                    <input type="text" id="usernameInput" class="form-input" placeholder="Enter a username" maxlength="20" required>
+                    <div class="username-input-group">
+                        <input type="text" id="usernameInput" class="form-input" placeholder="Enter a username" maxlength="20" required style="flex: 1;">
+                        <button type="button" class="shuffle-btn" id="shuffleBtn" title="Suggest Random Username">
+                            <svg style="width: 20px; height: 20px;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">I am</label>
+                    <div class="gender-options">
+                        <div class="gender-option" data-gender="Boy">
+                            <div class="gender-icon">👦</div>
+                            <div class="gender-label">Boy</div>
+                        </div>
+                        <div class="gender-option" data-gender="Girl">
+                            <div class="gender-icon">👧</div>
+                            <div class="gender-label">Girl</div>
+                        </div>
+                        <div class="gender-option" data-gender="LGBT">
+                            <div class="gender-icon">🏳️‍🌈</div>
+                            <div class="gender-label">LGBT</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="form-label">Looking for (Optional)</label>
+                    <div class="gender-options" id="lookingForOptions">
+                        <div class="gender-option" data-looking="Boy">
+                            <div class="gender-icon">👦</div>
+                            <div class="gender-label">Boy</div>
+                        </div>
+                        <div class="gender-option" data-looking="Girl">
+                            <div class="gender-icon">👧</div>
+                            <div class="gender-label">Girl</div>
+                        </div>
+                        <div class="gender-option" data-looking="LGBT">
+                            <div class="gender-icon">🏳️‍🌈</div>
+                            <div class="gender-label">LGBT</div>
+                        </div>
+                    </div>
+                    <p style="font-size: 12px; color: #9FB0C8; margin-top: 8px;">Leave unselected to match with anyone</p>
                 </div>
 
                 <div class="form-group">
@@ -676,7 +1007,7 @@
                     </label>
                 </div>
 
-                <button type="submit" class="btn-primary">Continue</button>
+                <button type="submit" class="btn-primary" id="continueBtn" disabled>Continue</button>
             </form>
         </div>
     </div>
@@ -689,14 +1020,13 @@
                 <!-- User Card -->
                 <div class="card">
                     <div class="user-card-header">
-                        <div class="avatar">
-                            <svg class="icon" style="width: 24px; height: 24px;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path>
-                            </svg>
+                        <div class="avatar" id="userAvatarIcon">
+                            👤
                         </div>
                         <div class="user-info">
                             <div class="user-name" id="displayUsername">User</div>
                             <div class="user-label">You</div>
+                            <div class="user-gender" id="displayGender"></div>
                         </div>
                     </div>
 
@@ -724,7 +1054,7 @@
                     <ul class="safety-list">
                         <li>• Never share personal information</li>
                         <li>• Be respectful to strangers</li>
-                        <li>• Report inappropriate behavior</li>
+                        <li>• No vulgar or offensive language</li>
                         <li>• Disconnect if uncomfortable</li>
                     </ul>
                 </div>
@@ -738,12 +1068,17 @@
                         <h3>Announcements</h3>
                     </div>
                     <p class="announcement-text">
-                        Welcome to Sorsogon Chat! Connect with strangers from your municipality or with shared interests.
-                    </p>
-                    <p class="announcement">
-                        Upcoming Features: Reply Thread, Emojis, Nickname Suggestions, and more!
+                        Welcome to Sorsogon Chat! Connect with strangers from your municipality or with shared interests. Keep conversations respectful!
                     </p>
                 </div>
+
+                <!-- Back Button -->
+                <button class="btn-back" id="backBtn">
+                    <svg style="width: 16px; height: 16px;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
+                    </svg>
+                    Back to Main Page
+                </button>
             </div>
 
             <!-- Right Panel -->
@@ -752,9 +1087,7 @@
                 <div class="chat-header">
                     <div class="stranger-info">
                         <div class="stranger-avatar" id="strangerAvatar">
-                            <svg class="icon" id="strangerIcon" style="color: #9FB0C8;" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path>
-                            </svg>
+                            👤
                         </div>
                         <div>
                             <div class="stranger-name" id="strangerName">Not Connected</div>
@@ -785,11 +1118,30 @@
                             <p>Click "Start Chatting" to find a stranger</p>
                         </div>
                     </div>
+                    
+                    <!-- Typing Indicator -->
+                    <div class="typing-indicator-wrapper">
+                        <div class="typing-indicator" id="typingIndicator">
+                            <div class="typing-dot"></div>
+                            <div class="typing-dot"></div>
+                            <div class="typing-dot"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Input Area -->
                 <div class="input-area" id="inputArea" style="display: none;">
-                    <textarea id="messageInput" class="message-input" placeholder="Type a message..." rows="1"></textarea>
+                    <div class="input-wrapper">
+                        <div class="replying-to" id="replyingTo" style="display: none;">
+                            <span id="replyText">Replying to message...</span>
+                            <span class="cancel-reply" id="cancelReply">✕</span>
+                        </div>
+                        <textarea id="messageInput" class="message-input" placeholder="Type a message..." rows="1"></textarea>
+                        <button class="emoji-trigger" id="emojiTrigger">😊</button>
+                        <div class="emoji-picker" id="emojiPicker">
+                            <div class="emoji-grid" id="emojiGrid"></div>
+                        </div>
+                    </div>
                     <button class="btn-send" id="sendBtn" disabled>
                         <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
