Update website UI / features

--- a/public/index.html
+++ b/public/index.html
@@ -1067,7 +1067,7 @@
                         📢 Announcements
                     </div>
                     <p class="announcement-text">
-                        Welcome to Sorsogon Chat! Connect with strangers. Keep it respectful!
+                        Welcome to Sorsogon Chat! Connect with strangers. Keep it respectful! This is created by: zhn & jiro.
                     </p>
                 </div>
 
